--- a/project/res/values-es-rMX/strings.xml
+++ b/project/res/values-es-rMX/strings.xml
@@ -112,6 +112,8 @@
     <string name="loading_hotels_and_flights">Cargando hoteles y vuelos…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Cuándo volar</string>
+    <!-- Waypoint fail message for when no suggestion is available. -->
+    <string name="waypoint_suggestion_fail">¡No se encontró información sobre el lugar! Modifica tu búsqueda y vuelve a intentarlo.</string>
 
 
     <!-- Tablet hotel filters -->
@@ -1120,6 +1122,10 @@
     <string name="I_Accept">Acepto</string>
     <!-- Slide to purchase -->
     <string name="slide_to_purchase">Desliza para hacer la compra.</string>
+    <!-- Slide-to-book widget prompt for hotels -->
+    <string name="slide_to_book_hotel">desliza para buscar un hotel</string>
+    <!-- Slide-to-book widget prompt for flights -->
+    <string name="slide_to_book_flight">desliza para reservar un vuelo</string>
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">Se cobrarán %1$s a tu tarjeta de crédito</string>
     <!-- Amount to be paid now -->
@@ -1508,7 +1514,7 @@
 
     <!-- Highlight view stuff -->
     <!-- Asks for a cvv code (credit card code) for a card.  %s is the card name, E.g., "CVV code for Dan's Credit Card" -->
-    <string name="cvv_code_TEMPLATE">&lt;center&gt;El código de seguridad para &lt;b&gt;%s&lt;/b&gt;&lt;/center&gt;</string>
+    <string name="cvv_code_TEMPLATE">El código de seguridad para &lt;b&gt;%s&lt;/b&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">la tarjeta con terminación %s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
@@ -3033,5 +3039,21 @@
     <string name="cd_tablet_results_hotel_list">Resultados de la búsqueda de hoteles</string>
     <!-- Content description for Flight Search Results -->
     <string name="cd_tablet_results_flight_list">Resultado de la búsqueda de vuelos</string>
+
+    <!-- Tablet Confirmation Screen -->
+    <!-- Header text to indicating booking confirmed for hotel -->
+    <string name="tablet_confirmation_hotel_booked">¡Tu hotel está reservado!</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
+    <string name="tablet_confirmation_summary">%1$s, %2$s para %3$s</string>
+    <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
+    <string name="tablet_itinerary_confirmation_TEMPLATE"># de itinerario%1$s enviado a%2$s</string>
+    <!-- Share button text -->
+    <string name="tablet_confirmation_share">Compartir estancia</string>
+    <!-- Call support button text -->
+    <string name="tablet_confirmation_call_support">Llamar al Servicio de asistencia</string>
+    <!-- Book Next Item button text -->
+    <string name="tablet_confirmation_book_next">Reservar el próximo elemento</string>
+    <!-- Done Booking button text -->
+    <string name="tablet_confirmation_done_booking">Completar la reservación</string>
 
 </resources>
