--- a/project/res/values-fr-rCA/strings.xml
+++ b/project/res/values-fr-rCA/strings.xml
@@ -112,6 +112,8 @@
     <string name="loading_hotels_and_flights">Chargement des hôtels et des vols…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Quand voler</string>
+    <!-- Waypoint fail message for when no suggestion is available. -->
+    <string name="waypoint_suggestion_fail">Aucune information sur le point de cheminement n\&apos;a été trouvée. Veuillez modifier votre demande et essayer de nouveau.</string>
 
 
     <!-- Tablet hotel filters -->
@@ -1120,6 +1122,10 @@
     <string name="I_Accept">J\&apos;accepte</string>
     <!-- Slide to purchase -->
     <string name="slide_to_purchase">Glissez pour acheter.</string>
+    <!-- Slide-to-book widget prompt for hotels -->
+    <string name="slide_to_book_hotel">glisser pour réserver l\&apos;hôtel</string>
+    <!-- Slide-to-book widget prompt for flights -->
+    <string name="slide_to_book_flight">glisser pour réserver le vol</string>
     <!-- Your card will be charged -->
     <string name="your_card_will_be_charged_TEMPLATE">Votre carte sera débitée de %1$s</string>
     <!-- Amount to be paid now -->
@@ -1508,7 +1514,7 @@
 
     <!-- Highlight view stuff -->
     <!-- Asks for a cvv code (credit card code) for a card.  %s is the card name, E.g., "CVV code for Dan's Credit Card" -->
-    <string name="cvv_code_TEMPLATE">&lt;center&gt;Code CVV pour &lt;b&gt;%s&lt;/b&gt;&lt;/center&gt;</string>
+    <string name="cvv_code_TEMPLATE">Code CVV pour &lt;b&gt;%s&lt;/b&gt;</string>
     <!-- Name for a generic card.  %s is the last four digits of the card, e.g. "card ending in 1234" -->
     <string name="card_ending_TEMPLATE">se terminant par %s</string>
     <!-- Title for screen telling you to complete your booking by entering a CVV # -->
@@ -3033,5 +3039,21 @@
     <string name="cd_tablet_results_hotel_list">Résultats de la recherche d\&apos;hôtels</string>
     <!-- Content description for Flight Search Results -->
     <string name="cd_tablet_results_flight_list">Résultats de la recherche de vols</string>
+
+    <!-- Tablet Confirmation Screen -->
+    <!-- Header text to indicating booking confirmed for hotel -->
+    <string name="tablet_confirmation_hotel_booked">Votre hôtel est réservé!</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
+    <string name="tablet_confirmation_summary">%1$s%2$s pour %3$s</string>
+    <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
+    <string name="tablet_itinerary_confirmation_TEMPLATE">Nº itinéraire %1$s envoyé à%2$s</string>
+    <!-- Share button text -->
+    <string name="tablet_confirmation_share">Partager le séjour</string>
+    <!-- Call support button text -->
+    <string name="tablet_confirmation_call_support">Communiquer avec le soutien</string>
+    <!-- Book Next Item button text -->
+    <string name="tablet_confirmation_book_next">Réserver prochain élément</string>
+    <!-- Done Booking button text -->
+    <string name="tablet_confirmation_done_booking">Réservation terminée</string>
 
 </resources>
